--- a/style.css
+++ b/style.css
@@ -20,15 +20,13 @@ header {
     background-image: url(src/Background/Background.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-}
-
-.main {
     display: flex;
 }
 
 .main_div {
     display: flex;
-    margin-top: 20vh; 
+    width: 100%;
+    justify-content: space-between;
 }
 
 
@@ -36,7 +34,7 @@ header {
 /*----------Стили для header (Три черные линии)---------------------*/
 
 .lines {
-    margin: 0 0 0 auto;     
+    margin: 0 0 0 auto;  
 }
 
 .black-line {
@@ -75,12 +73,11 @@ header {
 .main_media { 
     display: flex;
     flex-direction: row;
-    margin-left: -100px;
-    margin-top: 100px;
+    margin-top: 30vh;
+    margin-left: -70px;
     transform: rotate(-90deg);
     max-height: 120px;
     position: relative; 
-    width: 350px; 
 }
 
 .main_media p {
@@ -111,7 +108,8 @@ header {
 /*-------Стили для блока info----------*/
 
 .main_info {
-    margin-left: 150px; 
+    margin-top: 20vh;
+    margin-left: 17%;
     width: 350px;
 }
 
@@ -242,7 +240,7 @@ header {
 .about-me_work-info {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    
 }
 
 .about-me_work-info p {
@@ -251,12 +249,12 @@ header {
 
 .work-info_container {
     position: relative;
-    width: 270px;
+    width: 47%;
 }
 
 .work-info_container_1 {
     position: relative;
-    width: 270px;
+    width: 47%;
 }
 
 .work-info_container::before {
@@ -286,7 +284,7 @@ header {
 .work-info_container_text {
     padding-top: 25px; 
     margin-left: 50px;   
-    width: 200px;
+    width: 80%;
 }
 
 
@@ -565,7 +563,7 @@ header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .skills_scale div {
@@ -573,6 +571,7 @@ header {
     display: flex;
     justify-content: space-between;
     width: 30%;
+    min-width: 220px;
     margin-right: 30px;
     height: 100px;
     padding-left: 15px;
@@ -765,10 +764,11 @@ header {
 /*--------------Стили для блока Портфолио------------------*/
 
 .portfolio_works {
+    justify-items: stretch;
     display: grid;
-    gap: 3px;
-    grid-template-columns: (4, 220px);
-    grid-template-rows: (2, 220px);
+    gap: 5px; 
+    grid-template-columns: repeat(4, 220px);
+    grid-template-rows: repeat(2, 220px);
     grid-template-areas: 
         "uber pulse bread plans"
         "ipad mac mac plans";
@@ -804,7 +804,7 @@ header {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .price-list_h5-div {
@@ -813,7 +813,8 @@ header {
 }
 
 .prices {
-    width: 40%;
+    margin: 0 3%;
+    width: 320px;
     margin-bottom: 20px;
     position: relative;
 }
