--- a/media_style.css
+++ b/media_style.css
@@ -1,10 +1,20 @@
-@media (max-width: 1457px) {
+@media (max-width: 1580px) {
 
     body {
         font-size: 0.9rem;
     }
 
     /*---------Стили для Хэдера----------*/
+
+    header {
+        height: 600px;
+    }
+
+    .main_info {
+        margin-left: 8%;
+        width: 300px;
+    }
+
 
     .main_media::after {
         content: "";
@@ -78,7 +88,11 @@
     }
     
 
-    /*--------Стили для Хэдера--------*/
+    /*---------Стили для Хэдера-------------*/
+
+    header {
+        height: 700px;
+    }
 
     .main_info {
         margin-left: 8%;
@@ -292,23 +306,6 @@
 
 }
 
-
-
-
-
-
-/*
-
 @media (max-width: 820px) {
-
-    .portfolio_works {
-        grid-template-columns: repeat(2, 150px);
-        grid-template-rows: repeat(4, 150px);
-        grid-template-areas: 
-            "uber pulse"
-            "ipad plans"
-            "bread plans"
-            "mac mac";
-    }
+    
 }
-*/
