--- a/css/media_style.css
+++ b/css/media_style.css
@@ -17,13 +17,8 @@
 
 
     .main_media::after {
-        content: "";
-        position:absolute;
         top: 12px;
         left: 145px;
-        width: 70px;
-        height: 3px;
-        background-color: #000000;
     }
 
     .main_info {
@@ -710,6 +705,8 @@
         height: 0%;
     }
     .mac_1 { 
+        width: 100%;
+        height: 100%;
         grid-area: mac; 
     }
  
@@ -719,6 +716,8 @@
     }   
 
     .plans_1 {
+        width: 100%;
+        height: 100%;
         grid-area: plans;
     }
 
